welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:8: error: not found: value setPose
	setPose(diag,i)
        ^