welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
var x=0
ecritMessage(x);
for (i <- 1 to 6){
	diag=(diag+1)
	x=x+1
	setPose(diag,i)
	ecritMessage(x)
}

}
